# My-1st-Flask-API

./: pyproject.toml
instance/: blog.sqlite
migrations/versions/: 5b38299bd69d_add_password_field.py  677c548575fc_initial_migration.py
src/: app.py  config.py  db.py  utils.py
src/controllers/: auth.py  post.py  role.py  user.py
src/models/: post.py  role.py  user.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user.py
tests/unit/: test_utils.py
