[project]
name = "flask1"
version = "0.1.0"
description = ""
authors = [
    {name = "gabs",email = "1gbpr@gmail.com"}
]
requires-python = ">=3.13, <4.0"
dependencies = [
    "flask>=2.3,<4.0",
    "flask-sqlalchemy>=3.1,<4.0",
    "flask-migrate>=4.0,<5.0",
    "flask-jwt-extended>=4.6,<5.0",
    "pytest",
    "pytest-mock",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"